--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+/sarah_export_csvs.zip
+
+
+backup/*.*
+csvs/*.*
+
+.idea
+.DS_Store
